--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
                 </div>
             </div>
         </div>
-        <script id="zplayer" src="zplayer/ZPlayer.js"></script>
+        <script id="zplayer" src="zplayer/ZPlayer.js" type="module"></script>
     </body>
 </html>
